# cr8s

./: Cargo.toml  Dockerfile  README.md  REST API basics- CRUD, test & variable.postman_collection.json  diesel.toml  docker-compose.yml
migrations/2024-06-03-150521_create_rustaceans/: down.sql  up.sql
migrations/2024-06-03-150713_create_crates/: down.sql  up.sql
src/: main.rs  models.rs  repository.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
