[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
serde = "1.0.203"
